[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gcepy"
dynamic = ["version"]
description = "likelihoods and samplers for the Galactic center excess"
authors = [{ name = "Samuel D. McDermott", email = "samueldmcdermott@gmail.com" }]
license = {text="LICENSE.txt"}
dependencies = [
  "jax >=0.4",
  "dynesty >=2.0",
  "numpy >=1.26",
  "numpyro >=0.13",
  ]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "gcepy.__version__"}